refactor: organizando diretorios

--- a/Python/basico/001.ipynb
+++ b/Python/basico/001.ipynb
@@ -5,7 +5,7 @@
    "id": "edb4924f-4c18-41f8-a52c-42f24e86506c",
    "metadata": {},
    "source": [
-    "# Lógica de Programação\n",
+    "# Básico\n",
     "\n",
     "## Atividades\n",
     "1. Crie um programa que receba dois números inteiros e imprima a soma deles.\n",
