docs: refatorando lista com exercícios utilizando subtitulos

--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -1,22 +1,25 @@
 # Java Exercises
 
-Descrição dos exercícios do repositório Java.
+Lista de exercícios em Java para prática e aprendizado.
 
-**e001: Hello, World!**<br>
+### e001: Hello, World!
 Imprime "Hello, World!" no console para introduzir a sintaxe básica do Java.
 
-**e002: Controle de Estoque**<br>
+### e002: Controle de Estoque
 Gerencia o estoque de uma padaria, permitindo registrar a quantidade de farinha e açúcar disponíveis.
 
-**e003: Calculadora de Retângulo**<br>
+### e003: Calculadora de Retângulo
 Calcula a área de um retângulo com base em sua largura e altura fornecidas pelo usuário.
 
-**e004: Promoção Automática de Tipos**<br>
+### e004: Promoção Automática de Tipos
 Demonstra a promoção automática de tipos em expressões aritméticas do Java.
 
-**e005: Calculadora Simples**<br>
+### e005: Calculadora Simples
 Realiza operações aritméticas básicas (soma, subtração, multiplicação, divisão) usando operadores.
 
 ## Notas
 - Cada exercício está na pasta `exercicios/` com nomeação sequencial (e001.java, e002.java, etc.).
-- Para executar, siga as instruções no [README](../README.md) principal.
+- Para executar, siga as instruções no [README principal](../README.md).
+
+## Autor
+[Wellington M. Santos](https://www.linkedin.com/in/wellington-moreira-santos/)
