docs: update lista de exercicios

--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -17,6 +17,9 @@ Demonstra a promoção automática de tipos em expressões aritméticas do Java.
 ### e005: Calculadora Simples
 Realiza operações aritméticas básicas (soma, subtração, multiplicação, divisão) usando operadores.
 
+### e006: Operadores de Atribuição
+Use diferentes operadores de atribuição para manipular o valor de uma variável inteira.
+
 ## Notas
 - Cada exercício está na pasta `exercicios/` com nomeação sequencial (e001.java, e002.java, etc.).
 - Para executar, siga as instruções no [README principal](../README.md).
