docs: update lista de exercicios

--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -2,6 +2,8 @@
 
 Lista de exercícios em Java para prática e aprendizado.
 
+---
+
 ### e001: Hello, World!
 Imprime "Hello, World!" no console para introduzir a sintaxe básica do Java.
 
@@ -20,9 +22,19 @@ Realiza operações aritméticas básicas (soma, subtração, multiplicação, d
 ### e006: Operadores de Atribuição
 Use diferentes operadores de atribuição para manipular o valor de uma variável inteira.
 
+### **e007: Incremento e Decremento**
+Explore o uso dos operadores de **incremento (`++`)** e **decremento (`--`)** em variáveis inteiras. O exercício deve demonstrar:
+- O comportamento dos operadores em suas formas **pós-fixada** (`contador++`, `contador--`).
+- O comportamento dos operadores em suas formas **pré-fixada** (`++contador`, `--contador`).
+- A diferença entre os resultados quando os operadores são aplicados antes ou depois da variável.
+
+---
+
 ## Notas
 - Cada exercício está na pasta `exercicios/` com nomeação sequencial (e001.java, e002.java, etc.).
 - Para executar, siga as instruções no [README principal](../README.md).
+
+---
 
 ## Autor
 [Wellington M. Santos](https://www.linkedin.com/in/wellington-moreira-santos/)
