docs: adicionado exercicio 008

--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -28,6 +28,10 @@ Explore o uso dos operadores de **incremento (`++`)** e **decremento (`--`)** em
 - O comportamento dos operadores em suas formas **pré-fixada** (`++contador`, `--contador`).
 - A diferença entre os resultados quando os operadores são aplicados antes ou depois da variável.
 
+### **e008: Par ou Ímpar**
+Faça um programa que deve receber um número inteiro fixo (por exemplo, 10). 
+Dependendo do resultado da verificação, o programa exibirá a mensagem apropriada: "O número é par" ou "O número é ímpar".
+
 ---
 
 ## Notas
