--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -32,6 +32,11 @@ Explore o uso dos operadores de **incremento (`++`)** e **decremento (`--`)** em
 Faça um programa que deve receber um número inteiro fixo (por exemplo, 10). 
 Dependendo do resultado da verificação, o programa exibirá a mensagem apropriada: "O número é par" ou "O número é ímpar".
 
+### **e009: Positivo, Negativo ou Zero**
+Escreva um programa que leia um número (hardcode por enquanto) e imprima se ele é positivo, negativo ou zero.
+
+### **e010: Ano bissexto?**
+Crie um programa que determine se um ano (hardcode) é bissexto (divisível por 4, mas não por 100, exceto se por 400). Use ternário para atribuir "Sim" ou "Não".
 ---
 
 ## Notas
