--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -37,6 +37,21 @@ Escreva um programa que leia um número (hardcode por enquanto) e imprima se ele
 
 ### **e010: Ano bissexto?**
 Crie um programa que determine se um ano (hardcode) é bissexto (divisível por 4, mas não por 100, exceto se por 400). Use ternário para atribuir "Sim" ou "Não".
+
+### **e011: Feedbacks**
+Crie um programa em Java que receba um número do usuário (de 1 a 5) e mostre um feedback de acordo com esse número. Guarde o número digitado pelo usuário em uma variável inteira chamada nivel.
+
+Use a estrutura `switch` com seta (->) para verificar o valor de nivel e definir o feedback:
+```
+1: "Muito insatisfeito"
+2: "Insatisfeito"
+3: "Neutro"
+4: "Satisfeito"
+5: "Muito satisfeito"
+Qualquer outro número: "Opção inválida (deve estar entre 1 e 5)"
+```
+
+Imprima o feedback na tela usando `System.out.println`.
 ---
 
 ## Notas
