docs: adicionado desafio calculadora de metricas de vendas

--- a/Python/desafios/d000.md
+++ b/Python/desafios/d000.md
@@ -75,6 +75,12 @@ Crie um validador de qualidade de dados que:
 - Gere relatório detalhado com sugestões de correção
 - Salve resultados em formato estruturado (JSON/CSV)
 
+### d010. Calculadora de Métricas de Vendas
+Análise básica de vendas mensais, pense que você recebeu uma lista com os valores das vendas diárias de um e-commerce durante um mês. Sua tarefa é criar um programa que:
+- Calcule o total de vendas
+- Calcule a média de vendas diária
+- Exiba o dia com a maior venda e o dia com a menor venda.
+
 ## Notas
 - Cada desafio está na pasta `desafios/` com nomeação sequencial (d001.py, d002.py, etc.).
 - Para executar, siga as instruções no [README principal](../README.md).
