docs: descricao de exercicios 12 e 13

--- a/Java/exercicios/e000.md
+++ b/Java/exercicios/e000.md
@@ -50,8 +50,63 @@ Use a estrutura `switch` com seta (->) para verificar o valor de nivel e definir
 5: "Muito satisfeito"
 Qualquer outro número: "Opção inválida (deve estar entre 1 e 5)"
 ```
-
 Imprima o feedback na tela usando `System.out.println`.
+
+### e012: Calculadora de Dias do Mês
+Crie uma **calculadora de dias do mês** utilizando **switch expression** em Java (versão 14 ou superior). O programa deve receber o nome de um mês como uma string e retornar a quantidade de dias correspondente, seguindo as seguintes regras:
+
+1. Se o mês for **"Janeiro"**, **"Março"**, **"Maio"**, **"Julho"**, **"Agosto"**, **"Outubro"** ou **"Dezembro"**, o número de dias é **31**.
+2. Se o mês for **"Abril"**, **"Junho"**, **"Setembro"** ou **"Novembro"**, o número de dias é **30**.
+3. Se o mês for **"Fevereiro"**, o número de dias é **28** (considere um ano não bissexto).
+4. Se o mês não corresponder a nenhum dos casos acima, exiba a mensagem **"Mês desconhecido"**.
+
+**Requisitos:**
+
+- Utilize **switch expression** para implementar a lógica.
+- Exiba o resultado no formato: `"O mês de [mês] tem [dias] dias."` ou `"Mês desconhecido"`, conforme o caso.
+
+**Exemplo de Saída:**
+
+- Para a entrada `"Agosto"`, a saída deve ser: `"O mês de Agosto tem 31 dias."`
+- Para a entrada `"Fevereiro"`, a saída deve ser: `"O mês de Fevereiro tem 28 dias."`
+- Para a entrada `"Xpto"`, a saída deve ser: `"Mês desconhecido"`.
+
+**Dica:** Use a sintaxe de **switch expression** com setas (`->`) e a palavra-chave `yield` para retornar valores.
+
+### e013: Verificador de Aprovação de Aluno
+**Crie um programa em Java que verifique se um aluno foi aprovado ou reprovado com base em duas notas.**
+
+O programa deve:
+
+1. **Calcular a média aritmética** de duas notas (`nota1` e `nota2`).
+2. **Determinar o resultado** do aluno:
+    - Se a média for **maior ou igual a 6**, o aluno está **aprovado**.
+    - Se a média for **menor que 6**, o aluno está **reprovado**.
+3. **Exibir o resultado** no formato:
+    
+    `Média: [média]. O aluno foi [Aprovado/Reprovado].`
+    
+
+ **Requisitos:**
+
+- Utilize **estruturas de controle de fluxo** (`if-else` ou operador ternário) para determinar o resultado.
+- **Formate a saída** para exibir a média com **2 casas decimais**.
+- **Versão básica:** Use valores fixos para as notas (ex.: `nota1 = 5`, `nota2 = 4`).
+
+ **Exemplo de Saída:**
+
+- Para `nota1 = 7` e `nota2 = 8`:
+    
+    `Média: 7.50. O aluno foi Aprovado.`
+    
+- Para `nota1 = 4` e `nota2 = 5`:
+    
+    `Média: 4.50. O aluno foi Reprovado.`
+    
+**Dicas:**
+
+- Use `System.out.printf("Média: %.2f\n", media)` para formatar a média.
+
 ---
 
 ## Notas
